--- a/FAQ.css
+++ b/FAQ.css
@@ -24,7 +24,7 @@ body {
 }
 
 header {
-    height: 160px;
+    height: 90px; margin-left: 10px;
 }
 
 
@@ -91,43 +91,14 @@ hgroup {
 h2,
 h3 {
     font-weight: normal;
-    font-family: 'Lobster', cursive;
+    font-family: 'Times'; font: bold;;
 }
 
-h2 {
-    margin: 10px 0px 5px 0px;
-}
-
-h3 {
-    margin-bottom: 10px;
-    color: blue;
-}
-
-aside {
-    width: 230px;
-    float: left;
-    padding-left: 20px;
-}
-
-aside h2 {
-    padding: 20px 0px 10px 0px;
-}
-
-.contact {
-    padding-top: 30px;
-}
-
-aside article a {
-    display: block;
-    padding: 10px;
-    border-bottom: 1px solid #eee;
-}
-
-aside article a:hover {
-    color: blue;
-}
 
 footer {
     font-size: 80%;
     padding: 7px 0px 0px 20px;
 }
+
+p {padding: 20px}
+h2 {padding: 10px}
