--- a/AboutUs.css
+++ b/AboutUs.css
@@ -132,3 +132,11 @@ footer {
     padding: 7px 0px 0px 20px;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+
