--- a/FAQ.css
+++ b/FAQ.css
@@ -24,7 +24,7 @@ body {
 }
 
 header {
-    height: 90px; margin-left: 10px;
+    height: 160px;
 }
 
 
@@ -91,14 +91,26 @@ hgroup {
 h2,
 h3 {
     font-weight: normal;
-    font-family: 'Times'; font: bold;;
+    font-family: 'Lobster', cursive; padding: 10px;
 }
 
+h2 {
+    margin: 10px 0px 5px 0px; padding: 10px 
+}
+
+h3 {
+    margin-bottom: 10px;
+    color: blue;
+}
+
+.contact {
+    padding-top: 30px;
+}
+
+p {padding: 10px}
 
 footer {
     font-size: 80%;
     padding: 7px 0px 0px 20px;
-}
 
-p {padding: 20px}
-h2 {padding: 10px}
+
